# DTAC

./: BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  dtac_deps.bzl  dtac_loads.bzl  maven_install.json
bridge_proto/: BUILD  bridge.proto
cards_proto/: BUILD  cards.proto
dtac/: Asserts.h  Asserts.hpp  Auction.cpp  Auction.h  Auction.hpp  BUILD  Bid.cpp  Bid.h  Bid.hpp  BranchingStats.cpp  BranchingStats.h  BridgeTestBase.cpp  BridgeTestBase.h  BridgeTestBase.hpp  CStats.cpp  CStats.hpp  Claim.cpp  Claim.h  Claim.hpp  ClaimData.cpp  ClaimData.h  ClaimData.hpp  ClaimStats.cpp  ClaimTrick.cpp  ClaimTrick.h  ClaimTrick.hpp  CombinedDefender.cpp  CombinedDefender.h  CombinedDefender.hpp  Constants.h  Constants.hpp  Constraints.cpp  Constraints.h  Constraints.hpp  Exceptions.h  Exceptions.hpp  Hand.cpp  Hand.h  Hand.hpp  HandCache.h  (+39 more)
dtac/testdata/: BUILD  test.pbn
java/edu/nyu/bridge/player/: BUILD  BridgePlayer.java  HandPlayer.java  RecordingHandPlayer.java
java/edu/nyu/bridge/scoring/: BUILD  ContractResult.java  ContractScore.java  ImpScore.java  Imper.java  Result.java  Score.java  ScoreResult.java  (+1 more)
java/edu/nyu/cards/: BUILD  Cards.java  Dealer.java  GenericHand.java  Hand.java  HandConverter.java  HandView.java  Hands.java  Ranks.java  Suits.java
java/edu/nyu/proto/: BUILD  Protos.java
java/edu/nyu/util/: BUILD  ShortEnumConverter.java
javatests/edu/nyu/cards/: BUILD  CardsTest.java  GenericHandTest.java  HandTest.java  HelperTest.java  RanksTest.java  SuitsTest.java
proto/: java_proto_library.bzl  protobuf.bzl
rules/: build_test.bzl  junit.bzl
(+39 files in other folders)
