module(name = "dtac", version = "2.1")

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "protobuf", version = "29.0-rc3")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_python", version = "1.0.0-rc0")
bazel_dep(name = "rules_jvm_external", version = "4.5")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:32.0.1-jre",
        "com.google.guava:guava-testlib:32.0.1-jre",
        "com.google.guava:failureaccess:1.0.1",
        "com.google.errorprone:error_prone_annotations:2.5.1",
        "com.google.errorprone:error_prone_type_annotations:2.5.1",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.auto.value:auto-value:1.11.0",
        "com.google.auto.value:auto-value-annotations:1.11.0",
        "com.google.inject:guice:7.0.0",
        "com.google.truth:truth:1.4.4",
        "javax.inject:jsr330-api:0.9",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://dl.google.com/android/maven2",
        "https://repo1.maven.org/maven2",
        "https://repository.mulesoft.org/nexus/content/repositories/public/",
    ],
)
use_repo(maven, "maven")
